[tool.poetry]
name = "cz-kpn"
version = "4.0.0"
description = "commitizen with kpn style"
authors = ["Santiago Fraire Willemoes <santiago.fraire@kpn.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cz_kpn", from = "src" }]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
include = ["CHANGELOG.md", "docs/images/commit.gif", "docs/images/bump.gif"]
repository = "https://github.com/kpn/cz-kpn"
keywords = ["commitizen", "release-management", "autorelease"]


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
commitizen = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
ruff = "^0.14"
mypy = "^1.18"
tox = "^4.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."commitizen.plugin"]
cz_kpn = "cz_kpn:KPNCz"

[tool.ruff.lint.isort]
known-first-party = ["cz_kpn", "tests"]

[tool.ruff.lint]
select = ["I"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true